from src.engine.model.model import Model


class Map3DModel(Model):
    pass
