@startuml

' Template file to use to create the diagrams od the packages.
' Every file must have a sub part called INTERNAL with the internal connections of the package and
' a sub part called EXTERNAL with the external parts.
skinparam linetype polyline
skinparam linetype ortho

!startsub INTERNAL

package src.engine.scene.model {
        class src.engine.scene.model.Model
        class src.engine.scene.model.Points
        class src.engine.scene.model.Map3DModel
        class src.engine.scene.model.Map2DModel
        class src.engine.scene.model.Lines
        class src.engine.scene.model.Polygon
        class src.engine.scene.model.DashedLines
        class src.engine.scene.model.Plane
    }

src.engine.scene.model.Map2DModel -u-|> src.engine.scene.model.Model
src.engine.scene.model.Map3DModel -u-|> src.engine.scene.model.Model
src.engine.scene.model.Polygon -u-|> src.engine.scene.model.Model
src.engine.scene.model.Points -u-|> src.engine.scene.model.Model
src.engine.scene.model.Lines -u-|> src.engine.scene.model.Model
src.engine.scene.model.Plane -u-|> src.engine.scene.model.Model
src.engine.scene.model.DashedLines -u-|> src.engine.scene.model.Lines
src.engine.scene.model.Points --o src.engine.scene.model.Polygon
src.engine.scene.model.Lines --o src.engine.scene.model.Polygon
src.engine.scene.model.DashedLines -r--o src.engine.scene.model.Polygon

!endsub


!startsub EXTERNAL
    src.engine.scene.model.Model o-u--o src.engine.scene.Scene
    src.engine.scene.model.Map2DModel -u..> src.input.CTP
    src.engine.scene.model.Map3DModel -u..> src.engine.scene.UnitConverter

    src.engine.scene.model.Polygon -u..> src.error.PolygonError
!endsub


' Code that will affect only the current diagram
' can be messy since will not be imported
hide members


@enduml